Fix Add Widget dropdown menu styles.
Add max-height with scrollbar and apply sames styles than in the FlowPart.

--- a/src/OrchardCore.Themes/TheAdmin/Assets/scss/modules/_layout.scss
+++ b/src/OrchardCore.Themes/TheAdmin/Assets/scss/modules/_layout.scss
@@ -108,3 +108,53 @@ body {
 svg {
     vertical-align: -.125em;
 }
+
+// Dropdown menus
+
+.btn-widget-add-below {
+    ::-webkit-scrollbar {
+        width: 4px;
+        background-color: #EAEAEA;
+    }
+
+    ::-webkit-scrollbar-thumb {
+        background-color: #495057;
+    }
+
+    .dropdown-menu {
+        max-height: 200px;
+        overflow: hidden auto;
+        scrollbar-width: thin;
+        scrollbar-color: #495057 #EAEAEA;
+    }
+}
+
+.btn-widget-add-below-wrapper {
+    &:hover {
+        > .btn-widget-add-below {
+            border-width: 5px;
+            opacity: 1;
+        }
+    }     
+}
+.btn-widget-add-below {
+    position: relative;
+    z-index: 9999;
+    opacity: 0.7;
+    transition: 0.3s opacity;
+    > .btn-group {        
+        margin: 0 auto;
+        bottom: 17px;
+    }
+}
+[dir="ltr"] .btn-widget-add-below {
+    >  .btn-group {
+        left: calc(-14px + 50%);
+    }
+}
+
+[dir="rtl"] .btn-widget-add-below {
+    >  .btn-group {
+        right: calc(-14px + 50%);
+    }
+}
