--- a/src/OrchardCore.Themes/TheAdmin/wwwroot/Styles/TheAdmin.css
+++ b/src/OrchardCore.Themes/TheAdmin/wwwroot/Styles/TheAdmin.css
@@ -23290,6 +23290,45 @@ a[dir]:root[data-theme=default] .badge-dark:focus, a[data-theme=default][dir]:ro
 :root[data-theme=default] svg {
   vertical-align: -0.125em;
 }
+:root[data-theme=default] .btn-widget-add-below ::-webkit-scrollbar {
+  width: 4px;
+}
+[dir]:root[data-theme=default] .btn-widget-add-below ::-webkit-scrollbar {
+  background-color: #EAEAEA;
+}
+[dir]:root[data-theme=default] .btn-widget-add-below ::-webkit-scrollbar-thumb {
+  background-color: #495057;
+}
+:root[data-theme=default] .btn-widget-add-below .dropdown-menu {
+  max-height: 200px;
+  overflow: hidden auto;
+  scrollbar-width: thin;
+  scrollbar-color: #495057 #EAEAEA;
+}
+:root[data-theme=default] .btn-widget-add-below-wrapper:hover > .btn-widget-add-below {
+  opacity: 1;
+}
+[dir]:root[data-theme=default] .btn-widget-add-below-wrapper:hover > .btn-widget-add-below {
+  border-width: 5px;
+}
+:root[data-theme=default] .btn-widget-add-below {
+  position: relative;
+  z-index: 9999;
+  opacity: 0.7;
+  transition: 0.3s opacity;
+}
+:root[data-theme=default] .btn-widget-add-below > .btn-group {
+  bottom: 17px;
+}
+[dir]:root[data-theme=default] .btn-widget-add-below > .btn-group {
+  margin: 0 auto;
+}
+:root[data-theme=default] [dir=ltr] .btn-widget-add-below > .btn-group {
+  left: calc(-14px + 50%);
+}
+:root[data-theme=default] [dir=rtl] .btn-widget-add-below > .btn-group {
+  right: calc(-14px + 50%);
+}
 [dir]:root[data-theme=default] .bg-primary {
   background-color: #f8f9fa !important;
 }
@@ -46670,6 +46709,45 @@ a[dir]:root[data-theme=darkmode] .badge-dark:focus, a[dir]:root[data-theme=darkm
 }
 :root[data-theme=darkmode] svg {
   vertical-align: -0.125em;
+}
+:root[data-theme=darkmode] .btn-widget-add-below ::-webkit-scrollbar {
+  width: 4px;
+}
+[dir]:root[data-theme=darkmode] .btn-widget-add-below ::-webkit-scrollbar {
+  background-color: #EAEAEA;
+}
+[dir]:root[data-theme=darkmode] .btn-widget-add-below ::-webkit-scrollbar-thumb {
+  background-color: #495057;
+}
+:root[data-theme=darkmode] .btn-widget-add-below .dropdown-menu {
+  max-height: 200px;
+  overflow: hidden auto;
+  scrollbar-width: thin;
+  scrollbar-color: #495057 #EAEAEA;
+}
+:root[data-theme=darkmode] .btn-widget-add-below-wrapper:hover > .btn-widget-add-below {
+  opacity: 1;
+}
+[dir]:root[data-theme=darkmode] .btn-widget-add-below-wrapper:hover > .btn-widget-add-below {
+  border-width: 5px;
+}
+:root[data-theme=darkmode] .btn-widget-add-below {
+  position: relative;
+  z-index: 9999;
+  opacity: 0.7;
+  transition: 0.3s opacity;
+}
+:root[data-theme=darkmode] .btn-widget-add-below > .btn-group {
+  bottom: 17px;
+}
+[dir]:root[data-theme=darkmode] .btn-widget-add-below > .btn-group {
+  margin: 0 auto;
+}
+:root[data-theme=darkmode] [dir=ltr] .btn-widget-add-below > .btn-group {
+  left: calc(-14px + 50%);
+}
+:root[data-theme=darkmode] [dir=rtl] .btn-widget-add-below > .btn-group {
+  right: calc(-14px + 50%);
 }
 [dir]:root[data-theme=darkmode] .bg-primary {
   background-color: #1b1e1f !important;
